--- a/04_Chronos_Forecasting.ipynb
+++ b/04_Chronos_Forecasting.ipynb
@@ -85,7 +85,7 @@
     "print(f\"Device: {device}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"VRAM: {torch.cuda.get_device_properties(0).total_mem / 1024**3:.1f} GB\")"
+    "    print(f\"VRAM: {torch.cuda.get_device_properties(0).total_memory / 1024**3:.1f} GB\")"
    ]
   },
   {
