--- a/05_LLM_Analysis.ipynb
+++ b/05_LLM_Analysis.ipynb
@@ -77,7 +77,7 @@
     "print(f\"Device: {device}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    total_vram = torch.cuda.get_device_properties(0).total_mem / 1024**3\n",
+    "    total_vram = torch.cuda.get_device_properties(0).total_memory / 1024**3\n",
     "    print(f\"VRAM: {total_vram:.1f} GB\")"
    ]
   },
@@ -1127,30 +1127,30 @@
     "\n",
     "```\n",
     "Data Sources                  GPU Processing Pipeline              Output\n",
-    "┌──────────────┐    ┌─────────────────────────────────┐    ┌──────────────┐\n",
-    "│ yfinance     │    │ Notebook 02: Sentiment           │    │ Per-stock    │\n",
-    "│ RSS feeds    │───>│  FinBERT + RoBERTa + DistilRoBERTa│──>│ sentiment    │\n",
-    "│ News APIs    │    │                                   │    │ scores       │\n",
-    "├──────────────┤    ├─────────────────────────────────┤    ├──────────────┤\n",
-    "│ Price/volume │    │ Notebook 03: Technical            │    │ Buy/sell     │\n",
-    "│ OHLCV bars   │───>│  EMA, RSI, BB, VWAP, ORB         │──>│ signals      │\n",
-    "│              │    │  BacktestEngine validation         │    │              │\n",
-    "├──────────────┤    ├─────────────────────────────────┤    ├──────────────┤\n",
-    "│ Price history│    │ Notebook 04: Chronos              │    │ Probabilistic│\n",
-    "│              │───>│  Zero-shot forecasting             │──>│ forecasts    │\n",
-    "│              │    │  Confidence intervals              │    │              │\n",
-    "├──────────────┤    ├─────────────────────────────────┤    ├──────────────┤\n",
-    "│ Earnings     │    │ Notebook 05: LLM Analysis         │    │ Fundamental  │\n",
-    "│ SEC filings  │───>│  Phi-3 / Mistral-7B               │──>│ insights &   │\n",
-    "│ Transcripts  │    │  Structured JSON output            │    │ trade thesis │\n",
-    "└──────────────┘    └─────────────────────────────────┘    └──────────────┘\n",
-    "                                                                    │\n",
+    "\u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510    \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510    \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\n",
+    "\u2502 yfinance     \u2502    \u2502 Notebook 02: Sentiment           \u2502    \u2502 Per-stock    \u2502\n",
+    "\u2502 RSS feeds    \u2502\u2500\u2500\u2500>\u2502  FinBERT + RoBERTa + DistilRoBERTa\u2502\u2500\u2500>\u2502 sentiment    \u2502\n",
+    "\u2502 News APIs    \u2502    \u2502                                   \u2502    \u2502 scores       \u2502\n",
+    "\u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524\n",
+    "\u2502 Price/volume \u2502    \u2502 Notebook 03: Technical            \u2502    \u2502 Buy/sell     \u2502\n",
+    "\u2502 OHLCV bars   \u2502\u2500\u2500\u2500>\u2502  EMA, RSI, BB, VWAP, ORB         \u2502\u2500\u2500>\u2502 signals      \u2502\n",
+    "\u2502              \u2502    \u2502  BacktestEngine validation         \u2502    \u2502              \u2502\n",
+    "\u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524\n",
+    "\u2502 Price history\u2502    \u2502 Notebook 04: Chronos              \u2502    \u2502 Probabilistic\u2502\n",
+    "\u2502              \u2502\u2500\u2500\u2500>\u2502  Zero-shot forecasting             \u2502\u2500\u2500>\u2502 forecasts    \u2502\n",
+    "\u2502              \u2502    \u2502  Confidence intervals              \u2502    \u2502              \u2502\n",
+    "\u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524    \u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524\n",
+    "\u2502 Earnings     \u2502    \u2502 Notebook 05: LLM Analysis         \u2502    \u2502 Fundamental  \u2502\n",
+    "\u2502 SEC filings  \u2502\u2500\u2500\u2500>\u2502  Phi-3 / Mistral-7B               \u2502\u2500\u2500>\u2502 insights &   \u2502\n",
+    "\u2502 Transcripts  \u2502    \u2502  Structured JSON output            \u2502    \u2502 trade thesis \u2502\n",
+    "\u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518    \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518    \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\n",
+    "                                                                    \u2502\n",
     "                                                                    v\n",
-    "                                                           ┌──────────────┐\n",
-    "                                                           │ COMBINED     │\n",
-    "                                                           │ SIGNAL       │\n",
-    "                                                           │ + Risk Mgmt  │\n",
-    "                                                           └──────────────┘\n",
+    "                                                           \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\n",
+    "                                                           \u2502 COMBINED     \u2502\n",
+    "                                                           \u2502 SIGNAL       \u2502\n",
+    "                                                           \u2502 + Risk Mgmt  \u2502\n",
+    "                                                           \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\n",
     "```\n",
     "\n",
     "### Coming Up Next\n",
