--- a/06_Backtesting_Engine.ipynb
+++ b/06_Backtesting_Engine.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "print(\"Imports ready.\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)} ({torch.cuda.get_device_properties(0).total_mem/1024**3:.0f} GB)\")"
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)} ({torch.cuda.get_device_properties(0).total_memory/1024**3:.0f} GB)\")"
    ]
   },
   {
@@ -1183,7 +1183,7 @@
     "    prob_profit = sum(1 for r in returns if r > 0) / len(returns) * 100\n",
     "    summary = (\n",
     "        f\"Monte Carlo Summary (n=1000)\\n\"\n",
-    "        f\"{'─'*35}\\n\"\n",
+    "        f\"{'\u2500'*35}\\n\"\n",
     "        f\"P(Profit):      {prob_profit:.0f}%\\n\\n\"\n",
     "        f\"Return Percentiles:\\n\"\n",
     "        f\"  5th:    {np.percentile(returns, 5):+.1f}%\\n\"\n",
