--- a/07_Paper_Trading.ipynb
+++ b/07_Paper_Trading.ipynb
@@ -167,7 +167,7 @@
     "print(\"--- Environment ---\")\n",
     "print(\"Imports ready.\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)} ({torch.cuda.get_device_properties(0).total_mem/1024**3:.0f} GB)\")\n",
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)} ({torch.cuda.get_device_properties(0).total_memory/1024**3:.0f} GB)\")\n",
     "print(f\"  plotly: {'yes' if HAS_PLOTLY else 'no'}\")\n",
     "print(f\"  quantstats: {'yes' if HAS_QUANTSTATS else 'no'}\")\n",
     "print(f\"  scipy: {'yes' if HAS_SCIPY else 'no'}\")\n",
